--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:orientation="vertical"
         android:layout_weight="1">
 
         <Button
@@ -34,5 +35,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="OK" />
+
+        <Button
+            android:id="@+id/pass_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PASS" />
     </LinearLayout>
 </LinearLayout>
