--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <include layout="@layout/shared_toolbar" />
 
-        <EditText
-            android:id="@+id/id_test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="id test"
-            android:singleLine="true" />
-
-        <EditText
-            android:id="@+id/pw_test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="pw test"
-            android:singleLine="true" />
-    </LinearLayout>
-
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
         android:layout_weight="1">
+    </FrameLayout>
 
-        <Button
-            android:id="@+id/ok_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="OK" />
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabIndicatorHeight="0dp">
+    </com.google.android.material.tabs.TabLayout>
 
-        <Button
-            android:id="@+id/pass_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="PASS" />
-    </LinearLayout>
 </LinearLayout>
