--- a/app/src/main/res/drawable/background_category.xml
+++ b/app/src/main/res/drawable/background_category.xml
@@ -9,7 +9,7 @@
     <!-- Body -->
     <item android:bottom="1dp">
         <shape>
-            <solid android:color="@color/white" />
+            <solid android:color="@color/lightgray" />
         </shape>
     </item>
 </layer-list>
