--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -21,7 +21,7 @@
         android:id="@+id/vSelected"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/lightgray"
+        android:background="@color/transgray"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
