--- a/app/src/main/res/layout/shared_toolbar.xml
+++ b/app/src/main/res/layout/shared_toolbar.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@drawable/background_toolbar"
         android:minHeight="?attr/actionBarSize" />
 
 </com.google.android.material.appbar.AppBarLayout>
