--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
     <color name="highlight">#B2CCFF</color>
-    <color name="lightgray">#CCD3D3D3</color>
+    <color name="lightgray">#F5F5F5</color>
+    <color name="transgray">#CCD3D3D3</color>
 </resources>
