--- a/app/src/main/res/layout/shared_toolbar.xml
+++ b/app/src/main/res/layout/shared_toolbar.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.AppBarLayout
+<androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:elevation="0dp"
-    android:theme="@style/AppTheme.AppBarOverlay">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background_toolbar"
-        android:minHeight="?attr/actionBarSize" />
-
-</com.google.android.material.appbar.AppBarLayout>
+    android:background="@drawable/background_toolbar"
+    android:minHeight="?attr/actionBarSize">
+</androidx.appcompat.widget.Toolbar>
