--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,5 +16,6 @@
     <dimen name="img_raius">20dp</dimen>
 
     <dimen name="nav_tab_label_font_size">8sp</dimen>
+    <dimen name="stray_tab_label_font_size">12sp</dimen>
 
 </resources>
