--- a/app/src/main/res/layout/actionbar_category.xml
+++ b/app/src/main/res/layout/actionbar_category.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_centerInParent="true"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/action_category">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_centerInParent="true"
-        android:id="@+id/category_title"
+    <LinearLayout
+        android:id="@+id/action_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_horizontal"
-        android:text="@string/tab_adopt"/>
-
-    <ImageView
         android:layout_centerInParent="true"
-        android:id="@+id/category_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_drop_up"/>
+        android:layout_gravity="center">
 
+        <TextView
+            android:id="@+id/category_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tab_adopt" />
+
+        <ImageView
+            android:id="@+id/category_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_drop_up" />
+
+    </LinearLayout>
 </RelativeLayout>
