--- a/app/src/main/res/layout/activity_add_edit_memo.xml
+++ b/app/src/main/res/layout/activity_add_edit_memo.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/shared_appbar" />
+        <include layout="@layout/shared_toolbar" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/coordinatorLayout"
