--- a/app/src/main/res/layout/activity_stray.xml
+++ b/app/src/main/res/layout/activity_stray.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/shared_appbar" />
+    <include layout="@layout/shared_toolbar" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
