--- a/app/src/main/res/layout/item_categoies.xml
+++ b/app/src/main/res/layout/item_categoies.xml
@@ -7,24 +7,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background_category"
         android:orientation="horizontal"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/list_item_padding"
-        android:paddingBottom="@dimen/list_item_padding"
-        android:background="@drawable/background_category">
+        android:paddingBottom="@dimen/list_item_padding">
 
-        <TextView
-            android:id="@+id/categoryText"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/categoryText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="10sp" />
+
+            <ImageView
+                android:id="@+id/categoryNew"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:src="@drawable/ic_new" />
+        </LinearLayout>
 
         <ImageView
-            android:id="@+id/categoryNew"
+            android:id="@+id/extendableImg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_new"/>
+            android:src="@drawable/ic_plus"/>
 
     </LinearLayout>
 
