--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="white">#FFFFFF</color>
     <color name="highlight">#B2CCFF</color>
     <color name="lightgray">#F5F5F5</color>
+    <color name="darkwhite">#F8F8F8</color>
+    <color name="gray">#EDECEC</color>
     <color name="transgray">#CCD3D3D3</color>
 </resources>
