--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,8 @@
     <color name="lightgray">#F5F5F5</color>
     <color name="darkwhite">#F8F8F8</color>
     <color name="gray">#EDECEC</color>
+    <color name="darkgray">#AEAEAE</color>
     <color name="transgray">#CCD3D3D3</color>
+    <color name="green">#8BC34A</color>
+    <color name="red">#F44336</color>
 </resources>
