--- a/app/src/main/res/layout/item_strayt1.xml
+++ b/app/src/main/res/layout/item_strayt1.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainCard"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="110dp"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/list_item_padding"
     android:paddingBottom="@dimen/list_item_padding"
-    android:layout_marginBottom="@dimen/activity_vertical_margin"
     card_view:cardElevation="2dp">
 
     <LinearLayout
@@ -20,38 +20,75 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:gravity="center_vertical"
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/kindCd"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:text="[개] 믹스견 | 암컷" />
+                android:layout_marginTop="5dp"
+
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/stateTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:text="보호중"
+                    android:textSize="10sp"/>
+
+                <TextView
+                    android:id="@+id/dateTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2020.07.21 ~ 2020.07.031"
+                    android:textSize="10sp"
+                    android:textColor="@color/darkgray"/>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/content"
+                android:id="@+id/kindTxt"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_weight="2"
-                android:ellipsize="end"
-                android:textSize="15sp"
-                android:maxLines="3" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="[개] 믹스견 | 검은색 | 암컷"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/noticeTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:text="서울-양천-2020-00195"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/placeTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:text="목동목동아파트7단지부근도로변(다음7-9)"
+                android:textSize="12sp" />
+
+
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
+            android:gravity="center">
 
             <ImageView
-                android:id="@+id/pic"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="20dp"
-                tools:srcCompat="@tools:sample/avatars"
-                android:scaleType="centerCrop"/>
+                android:id="@+id/picImg"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:scaleType="centerCrop"
+                tools:srcCompat="@tools:sample/avatars" />
         </LinearLayout>
     </LinearLayout>
 
