--- a/app/src/main/res/layout/fragment_stray_calendar.xml
+++ b/app/src/main/res/layout/fragment_stray_calendar.xml
@@ -6,6 +6,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="xxxxxxx"
+        android:text="calendar"
         android:gravity="center"/>
 </LinearLayout>
