--- a/app/src/main/res/layout/tab_stray_t1.xml
+++ b/app/src/main/res/layout/tab_stray_t1.xml
@@ -4,15 +4,27 @@
     android:id="@+id/nav_tab"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/nav_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:shadowColor="@android:color/black"
+        android:text="홈"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/stray_tab_label_font_size" />
+
+    <ImageView
+        android:id="@+id/nav_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_drop_up" />
+    </LinearLayout>
 
 </LinearLayout>
