--- a/app/src/main/res/layout/fragment_stray_t1.xml
+++ b/app/src/main/res/layout/fragment_stray_t1.xml
@@ -25,12 +25,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-        <FrameLayout
+        <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone">
-        </FrameLayout>
+            android:visibility="gone"
+            android:orientation="horizontal">
+        </LinearLayout>
 
     </FrameLayout>
 
