--- a/app/src/main/res/layout/fragment_stray_calendar.xml
+++ b/app/src/main/res/layout/fragment_stray_calendar.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="200dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
+    <com.applikeysolutions.cosmocalendar.view.CalendarView
+        android:id="@+id/calendar_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="calendar"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        app:currentDayTextColor="#f79256"
+        app:firstDayOfTheWeek="sunday"
+        app:orientation="horizontal"
+        app:selectedDayBackgroundColor="@color/lightprimary"
+        app:selectedDayBackgroundEndColor="@color/primary"
+        app:selectedDayBackgroundStartColor="@color/primary"
+        app:selectedDayTextColor="#FFFFFF"
+        app:selectionType="range"
+        app:weekendDayTextColor="#ef4550"
+        app:calendarBackgroundColor="@android:color/transparent"/>
 </LinearLayout>
