--- a/app/src/main/res/layout/fragment_stray_t1.xml
+++ b/app/src/main/res/layout/fragment_stray_t1.xml
@@ -28,7 +28,7 @@
             app:tabRippleColor="@android:color/transparent" />
 
             <ImageView
-                android:id="@+id/searchBtn"
+                android:id="@+id/searchIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:gravity="center"
