--- a/app/src/main/res/layout/fragment_stray_t1.xml
+++ b/app/src/main/res/layout/fragment_stray_t1.xml
@@ -36,11 +36,10 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" />
+            android:layout_height="match_parent"/>
     </LinearLayout>
 
     <!--This is the backdrop's content with a BottomSheetBehaviour applied to it-->
