--- a/app/src/main/res/layout/fragment_stray_t1.xml
+++ b/app/src/main/res/layout/fragment_stray_t1.xml
@@ -16,12 +16,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             app:tabGravity="fill"
             app:tabIndicatorHeight="0dp"
             app:tabMode="scrollable"
