--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -24,6 +24,17 @@
         <item name="android:textSize">@dimen/stray_tab_label_font_size</item>
         <item name="colorControlNormal">@color/colorPrimaryDark</item>
         <item name="colorControlActivated">@color/primary</item>
+    </style>
+
+    <style name="Animation">
+<!--        <item name="android:windowSharedElementsUseOverlay" tools:targetApi="lollipop">false</item>-->
+<!--        <item name="android:windowContentTransitions" tools:targetApi="lollipop">true</item>-->
+
+<!--        <item name="android:windowSharedElementEnterTransition" tools:targetApi="lollipop">@transition/activity_detail_s_e_enter</item>-->
+<!--        <item name="android:windowSharedElementReturnTransition" tools:targetApi="lollipop">@transition/activity_detail_s_e_return</item>-->
+
+<!--        <item name="android:windowEnterTransition" tools:targetApi="lollipop">@transition/activity_detail_enter</item>-->
+<!--        <item name="android:windowReturnTransition" tools:targetApi="lollipop">@transition/activity_detail_return</item>-->
     </style>
 
 </resources>
