--- a/app/src/main/res/layout/activity_stray_detail.xml
+++ b/app/src/main/res/layout/activity_stray_detail.xml
@@ -1,27 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainCard"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
-    android:layout_marginBottom="@dimen/activity_vertical_margin"
-    android:paddingStart="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/list_item_padding"
-    android:paddingBottom="@dimen/list_item_padding"
-    card_view:cardElevation="2dp">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout01"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:id="@+id/imageView01"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:transitionName="pair_thumb"
+                app:layout_collapseMode="parallax"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" />
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:gravity="center_vertical"
-            android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
@@ -37,15 +62,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:text="보호중"
-                    android:textSize="10sp"/>
+                    android:textSize="10sp" />
 
                 <TextView
                     android:id="@+id/dateTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2020.07.21 ~ 2020.07.031"
-                    android:textSize="10sp"
-                    android:textColor="@color/darkgray"/>
+                    android:textColor="@color/darkgray"
+                    android:textSize="10sp" />
             </LinearLayout>
 
             <TextView
@@ -72,24 +97,10 @@
                 android:gravity="top"
                 android:text="목동목동아파트7단지부근도로변(다음7-9)"
                 android:textSize="12sp" />
-
-
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
-            android:gravity="center">
 
-            <ImageView
-                android:id="@+id/picImg"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:scaleType="centerCrop"
-                tools:srcCompat="@tools:sample/avatars"
-                android:transitionName="pair_thumb"/>
-        </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
