--- a/app/src/main/res/layout/tab_stray_t1.xml
+++ b/app/src/main/res/layout/tab_stray_t1.xml
@@ -12,7 +12,7 @@
         android:shadowColor="@android:color/black"
         android:text="홈"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/stray_tab_label_font_size" />
+        android:textSize="@dimen/label_font_14sp" />
 
     <ImageView
         android:id="@+id/nav_icon"
