--- a/app/src/main/res/layout/activity_stray_detail.xml
+++ b/app/src/main/res/layout/activity_stray_detail.xml
@@ -73,7 +73,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
-                                android:textSize="@dimen/stray_tab_label_font_size" />
+                                android:textSize="@dimen/label_font_14sp" />
 
                             <TextView
                                 android:id="@+id/kindTxt"
@@ -81,7 +81,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
-                                android:textSize="@dimen/stray_tab_label_font_size" />
+                                android:textSize="@dimen/label_font_14sp" />
 
 
                             <TextView
@@ -90,7 +90,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
-                                android:textSize="@dimen/stray_tab_label_font_size"
+                                android:textSize="@dimen/label_font_14sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
 
@@ -111,14 +111,14 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginEnd="4dp"
                                     android:text="접수일"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
 
                                 <TextView
                                     android:id="@+id/hdateTxt"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -132,14 +132,14 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginEnd="4dp"
                                     android:text="공고기간"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
 
                                 <TextView
                                     android:id="@+id/sdateTxt"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -153,14 +153,14 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginEnd="4dp"
                                     android:text="구조장소"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
 
                                 <TextView
                                     android:id="@+id/locationTxt"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -174,14 +174,14 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginEnd="4dp"
                                     android:text="나이"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
 
                                 <TextView
                                     android:id="@+id/ageTxt"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -195,14 +195,14 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginEnd="4dp"
                                     android:text="체중"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
 
                                 <TextView
                                     android:id="@+id/kgTxt"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -215,14 +215,14 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginEnd="4dp"
                                     android:text="특징"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
 
                                 <TextView
                                     android:id="@+id/featureTxt"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="@dimen/label_font_10sp" />
+                                    android:textSize="@dimen/label_font_12sp" />
                             </LinearLayout>
 
 
@@ -233,7 +233,7 @@
                                 android:layout_marginTop="16dp"
                                 android:text="동물보호기관"
                                 android:textColor="@color/primary"
-                                android:textSize="@dimen/stray_tab_label_font_size" />
+                                android:textSize="@dimen/label_font_14sp" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -252,14 +252,14 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginEnd="4dp"
                                         android:text="기관"
-                                        android:textSize="@dimen/label_font_10sp" />
+                                        android:textSize="@dimen/label_font_12sp" />
 
                                     <TextView
                                         android:id="@+id/careTxt"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:textColor="@color/colorPrimaryDark"
-                                        android:textSize="@dimen/label_font_10sp" />
+                                        android:textSize="@dimen/label_font_12sp" />
                                 </LinearLayout>
 
                                 <LinearLayout
@@ -273,14 +273,14 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginEnd="4dp"
                                         android:text="위치"
-                                        android:textSize="@dimen/label_font_10sp" />
+                                        android:textSize="@dimen/label_font_12sp" />
 
                                     <TextView
                                         android:id="@+id/clocationTxt"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:textColor="@color/colorPrimaryDark"
-                                        android:textSize="@dimen/label_font_10sp" />
+                                        android:textSize="@dimen/label_font_12sp" />
                                 </LinearLayout>
 
                                 <LinearLayout
@@ -294,14 +294,14 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginEnd="4dp"
                                         android:text="연락처"
-                                        android:textSize="@dimen/label_font_10sp" />
+                                        android:textSize="@dimen/label_font_12sp" />
 
                                     <TextView
                                         android:id="@+id/callTxt"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:textColor="@color/colorPrimaryDark"
-                                        android:textSize="@dimen/label_font_10sp" />
+                                        android:textSize="@dimen/label_font_12sp" />
                                 </LinearLayout>
                             </LinearLayout>
                         </LinearLayout>
