--- a/app/src/main/res/layout/fragment_stray_t1.xml
+++ b/app/src/main/res/layout/fragment_stray_t1.xml
@@ -53,7 +53,7 @@
         app:behavior_peekHeight="40dp"
         app:layout_behavior=".util.GestureLockedBottomSheet">
 
-        <com.cesar.materialcomponents.Banner
+        <com.example.toy_project.util.Banner
             android:id="@+id/banner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -61,7 +61,7 @@
             app:leftButtonText="자세히 보기"
             app:rightButtonText="끄기"
             app:contentTextColor="@color/colorPrimaryDark"
-            app:buttonsTextColor="@color/colorPrimaryDark"
+            app:buttonsTextColor="@color/primary"
             app:bannerBackgroundColor="@color/darkwhite"/>
 
         <!--This is the backdrop's header with a title and icon-->
@@ -81,7 +81,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:text="전체 | 전체 | 전체 | 2020.06.21 ~ 2020.07.21"
-                android:textSize="@dimen/nav_tab_label_font_size" />
+                android:textSize="@dimen/label_font_10sp" />
 
             <ImageView
                 android:id="@+id/filterIcon"
