--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,8 @@
     <color name="transgray">#CCD3D3D3</color>
     <color name="green">#8BC34A</color>
     <color name="red">#F44336</color>
+
+    <color name="weird_green">#4dcd9c</color>
+    <color name="navigationBarColor">#2e2e2e</color>
+    <color name="off_white">#f6f6f5</color>
 </resources>
