--- a/app/src/main/res/layout/activity_show_list.xml
+++ b/app/src/main/res/layout/activity_show_list.xml
@@ -4,17 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <include layout="@layout/shared_toolbar" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/categoryRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/categoryRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -22,6 +26,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -31,9 +36,8 @@
             android:background="@color/darkwhite" />
 
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </RelativeLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add"
         android:layout_width="wrap_content"
@@ -44,5 +48,7 @@
         app:fabSize="normal"
         app:layout_anchor="@id/container"
         app:layout_anchorGravity="bottom|right|end" />
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
